src/objects/BGBL__Query__c.object
<CustomObject>
    <description>Query definitions including fields, where clause, etc</description>
    <fields>
        <fullName>BGBL__LIMIT_Filter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Limit the maximum number of results returned  eg. 100</inlineHelpText>
        <label>LIMIT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__ORDER_BY_Direction_Short__c</fullName>
        <formula>IF
(
TEXT( BGBL__ORDER_BY_Direction__c ) == &quot;Ascending&quot;,
&quot;ASC&quot;,
&quot;DESC&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ORDER BY Direction (Short). eg. ASC or DESC</inlineHelpText>
        <label>ORDER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__ORDER_BY_Direction__c</fullName>
        <label>ORDER BY Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                    <default>true</default>
                    <label>Ascending</label>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBL__ORDER_BY_Filter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use to return query results in a particular order eg. CloseDate, CreatedDate</inlineHelpText>
        <label>ORDER BY Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Object_Fields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field names should be comma-separated and use full API name (e.g., &quot;__c&quot; for custom fields)

Example:  
  Id, Name, BillingStreet, BillingCity, CustomField__c</inlineHelpText>
        <label>Fields</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BGBL__Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Full API Object Name eg. MUSW__Permit__c</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBL__Track_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGBL__Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Query No.</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGBL__WHERE_Filter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>eg. Region__c = &apos;East&apos; AND ModifiedDate = LAST_YEAR</inlineHelpText>
        <label>WHERE Filter</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Letter Query</label>
    <listViews>
        <fullName>BGBL__All</fullName>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>BGBL__Object_Name__c</columns>
        <columns>BGBL__WHERE_Filter__c</columns>
        <columns>BGBL__LIMIT_Filter__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BGBL__Fields_Required</fullName>
        <active>true</active>
        <errorConditionFormula>BGBL__Object_Fields__c = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>BGBL__Object_Fields__c</errorDisplayField>
        <errorMessage>You must specify which fields you want the query to return for merging.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBL__Fields_id</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(CONTAINS(SUBSTITUTE(UPPER(BGBL__Object_Fields__c) , &quot; &quot;,&quot;&quot;), &quot;,ID,&quot;),BEGINS(SUBSTITUTE(UPPER(BGBL__Object_Fields__c) , &quot; &quot;,&quot;&quot;), &quot;ID,&quot;),CONTAINS(SUBSTITUTE(UPPER(BGBL__Object_Fields__c) , &quot; &quot;,&quot;&quot;), &quot;,ID&quot;)))</errorConditionFormula>
        <errorMessage>Query fields must include id field in list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBL__Relationship_Queries_are_not_Supported</fullName>
        <active>true</active>
        <description>.NET letter app needs relationship queries to be defined explicitly</description>
        <errorConditionFormula>OR(CONTAINS( BGBL__Object_Fields__c, &quot;(&quot;),CONTAINS(BGBL__Object_Fields__c, &quot;)&quot;))</errorConditionFormula>
        <errorMessage>Relationship queries are not permitted with Letter Generator. Instead, create another letter query with this query as the parent to follow this one</errorMessage>
    </validationRules>
</CustomObject>